--- a/icg/CMakeLists.txt
+++ b/icg/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 3.8)
 project(icg_ros)
 
+
 set(CMAKE_CXX_STANDARD 17)
 
 cmake_policy(SET CMP0072 NEW)
 set(OpenGL_GL_PREFERENCE GLVND)
+
+
 
 # ===================== Dependencies =====================
 find_package(ament_cmake REQUIRED)
@@ -12,6 +15,11 @@ find_package(rclcpp REQUIRED)
 find_package(rclpy REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(icg_msgs REQUIRED)
+
+find_package(ros2_aruco_interfaces REQUIRED)
+
 find_package(cv_bridge REQUIRED)
 find_package(message_filters REQUIRED)
 find_package(Eigen3 REQUIRED)
@@ -27,6 +35,8 @@ include_directories(
     include
     third_party
     ${EIGEN3_INCLUDE_DIR}
+    ${icg_msgs_INCLUDE_DIRS}
+    ${ros2_aruco_interfaces_INCLUDE_DIRS}
 )
 
 # ===================== Library =====================
@@ -58,36 +68,43 @@ set(SOURCES
     src/icg/generator.cpp
 )
 
+
 add_library(icg STATIC ${SOURCES})
 
 ament_target_dependencies(
     icg
     rclcpp
     std_msgs
+    icg_msgs
+    ros2_aruco_interfaces
     sensor_msgs
     OpenCV
     Eigen3
 )
 
 # ===================== Executables =====================
-add_executable(icg_test_node
-    src/icg_test_node.cpp
+add_executable(icg_eyeinhand
+    src/icg_eyeinhand.cpp
     src/icg_ros/icg_ros_interface.cpp
     src/icg_ros/ros_camera.cpp
 )
 
 ament_target_dependencies(
-    icg_test_node
+    icg_eyeinhand
     rclcpp
     std_msgs
+    icg_msgs
+    ros2_aruco_interfaces
     sensor_msgs
+    geometry_msgs
     cv_bridge
     OpenCV
     Eigen3
 )
 
+
 target_link_libraries(
-    icg_test_node
+    icg_eyeinhand
     icg
     GLEW::GLEW
     glfw
@@ -97,29 +114,48 @@ target_link_libraries(
     OpenMP::OpenMP_CXX
 )
 
-# target_link_libraries(icg_test_node
-#     icg
-#     ${rclcpp_LIBRARIES}
-#     ${std_msgs_LIBRARIES}
-#     GLEW::GLEW
-#     glfw
-#     gflags
-#     OpenMP::OpenMP_CXX
-# )
 
-# target_link_libraries(icg PUBLIC
-#     ${LIBRARIES}
-#     GLEW::GLEW
-#     glfw
-#     gflags
-#     OpenMP::OpenMP_CXX
-# )
+add_executable(icg_eyetohand
+    src/icg_eyetohand.cpp
+    src/icg_ros/icg_ros_interface.cpp
+    src/icg_ros/ros_camera.cpp
+)
+
+ament_target_dependencies(
+    icg_eyetohand
+    rclcpp
+    std_msgs
+    icg_msgs
+    ros2_aruco_interfaces
+    sensor_msgs
+    geometry_msgs
+    cv_bridge
+    OpenCV
+    Eigen3
+)
 
 
+target_link_libraries(
+    icg_eyetohand
+    icg
+    GLEW::GLEW
+    glfw
+    ${OPENGL_gl_LIBRARY}
+    OpenGL::GL
+    gflags
+    OpenMP::OpenMP_CXX
+)
 
 # ===================== Install =====================
 install(
-    TARGETS icg icg_test_node
+    TARGETS icg icg_eyeinhand
+    ARCHIVE DESTINATION lib/${PROJECT_NAME}
+    LIBRARY DESTINATION lib/${PROJECT_NAME}
+    RUNTIME DESTINATION lib/${PROJECT_NAME}
+)
+
+install(
+    TARGETS icg icg_eyetohand
     ARCHIVE DESTINATION lib/${PROJECT_NAME}
     LIBRARY DESTINATION lib/${PROJECT_NAME}
     RUNTIME DESTINATION lib/${PROJECT_NAME}
@@ -140,5 +176,6 @@ install(
     DIRECTORY launch/
     DESTINATION share/${PROJECT_NAME}/launch
 )
+
 
 ament_package()
