--- a/icg_msgs/package.xml
+++ b/icg_msgs/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>ros2_aruco_interfaces</name>
+  <name>icg_msgs</name>
   <version>0.1.0</version>
-  <description>Custom messages for ros2_aruco</description>
+  <description>Custom messages for icg_ros2</description>
   <maintainer email="nathan.r.sprague@gmail.com">Nathan Sprague</maintainer>
   <license>TODO: License declaration</license>
 
