--- a/icg/package.xml
+++ b/icg/package.xml
@@ -10,6 +10,12 @@
   <depend>rclcpp</depend>
   <depend>rclpy</depend>
   <depend>std_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>cv_bridge</depend>
+  <depend>message_filters</depend>
+  <depend>icg_msgs</depend>
+ 
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   
